--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "playhq-proxy",
-  "private": true,
   "version": "1.0.0",
-  "type": "module",
-  "engines": { "node": ">=18" }
+  "private": true,
+  "type": "module"
 }
